flux/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.0.3
          ports:
            - name: http
              containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /data/downloads
      volumes:
        - name: downloads
          nfs:
            server: 192.168.0.2
            path: /main/downloads
            readOnly: false
        - name: config
          persistentVolumeClaim:
            claimName: config
