flux/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  annotations:
    tailscale.com/hostname: qbittorrent
spec:
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
